Try to fix too big code font on mobile

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -307,24 +307,23 @@ pre{
     overflow: auto;
     scrollbar-width: thin;
     line-height: 1.25 !important;
-    font-size: inherit !important;
+    font-size: 1rem !important;
 }
 
 code{
-    font-size: inherit !important;
+    font-size: 1rem !important;
     border-radius: 0 !important;
     line-height: inherit !important;
 }
 
 code *{
-    font-size: inherit !important;
+    font-size: 1rem !important;
     line-height: inherit !important;
 }
 
 .fly-nav-active{
     color: var(--primary-color) !important;
 }
-
 
 .fly-header{
 
